tests/error/vector_too_big.gw
// [contains] extraneous component of
 @(0,0,0,0,0);
